--- a/Imagerotate.html
+++ b/Imagerotate.html
@@ -127,7 +127,7 @@ img {vertical-align: middle;}
   padding: 10px;
   border-radius: 25px;" />
 
-        <input type="image" src="fetures.png" height="60px" onclick="showfeatures()" style="  border: 2px solid ;
+        <input type="image" src="https://github.com/pkkrrish/360html/blob/master/fetures.PNG" height="60px" onclick="showfeatures()" style="  border: 2px solid ;
   padding: 10px;
   border-radius: 25px;" />
         <!--<button onclick="playPause()" style="  border: 2px solid red;
