--- a/Landingpage.html
+++ b/Landingpage.html
@@ -148,7 +148,7 @@
 
         <input type="image" id="opener" src="angle360.jpg" height="60px" onclick="playPause()" class="bton" />
 
-        <input type="image" id="openerfet" src="fetures.png" height="60px" onclick="showfeatures()" class="btonr" />
+        <input type="image" id="openerfet" src="features-icon-png-17.jpg" height="60px" onclick="showfeatures()" class="btonr" />
         <!--<button class="btn">Button1</button>
         <button class="btn">Button2</button>-->
     </div>
