--- a/Imagerotatefeatures.html
+++ b/Imagerotatefeatures.html
@@ -124,7 +124,7 @@ img {vertical-align: middle;}
     <div style="text-align:center">
 
      
-        <a href="Landing.html" style="border: 1px solid ;
+        <a href="Landingpage.html" style="border: 1px solid ;
   padding: 10px;
   border-radius: 25px;">Back</a>
 
