--- a/Imagerotatefeatures.html
+++ b/Imagerotatefeatures.html
@@ -55,7 +55,7 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #150b0b;
+  color: #a56b14;
   font-size: 50px;
   padding: 8px 12px;
   position: absolute;
